--- a/src/scss/_filter.scss
+++ b/src/scss/_filter.scss
@@ -337,11 +337,12 @@
     }
 
     &__arrow {
-      background-image: url(/img/arrow.svg);
-      background-repeat: no-repeat;
-      background-size: cover;
+
       width: 10px;
       height: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     &__inner {
