--- a/src/scss/blocks/products.scss
+++ b/src/scss/blocks/products.scss
@@ -59,6 +59,9 @@
         .products-item {
           max-width: 282px;
         }
+        .products-min__slider-inner .swiper-slide{
+          max-width: 54.5px !important;
+        }
       }
 
       .products-item__price {
@@ -79,11 +82,8 @@
           line-height: 1;
           text-transform: unset;
           border-radius: 4px;
-          background: #EA6E34;
-          color: #fff;
           outline: none;
           position: relative;
-          transition: all .3s ease-in-out;
           display: inline-flex;
           align-items: center;
           justify-content: center;
@@ -92,6 +92,13 @@
           height: 40px;
           font-size: 16px;
           border: 1px solid #fc6519;
+          background: #fff;
+          color: #EA6E34;
+          transition: var(--transition);
+          &:hover{
+            background: #EA6E34;
+            color: #fff;
+          }
         }
 
         .btn--transparent {
@@ -165,7 +172,6 @@
     position: relative;
     border: 1px solid #f2f2f0;
     padding: 0 15px;
-    cursor: pointer;
     display: flex;
     flex-direction: column;
 
@@ -211,9 +217,9 @@
         margin: 0 -15px;
         padding: 0 15px;
         position: relative;
-        display: flex !important;
-        align-items: center;
-        justify-content: center;
+        //display: flex !important;
+        //align-items: center;
+        //justify-content: center;
         margin-bottom: 20px;
         .swiper-slide{
           max-height: 40px;
@@ -228,8 +234,9 @@
           height: 100%;
         }
 
-        .swiper-wrapper {
-          //margin: 0 15px;
+        .swiper-slide {
+          max-width: 48px;
+          cursor: pointer;
         }
 
         .swiper-slide-active {
@@ -419,6 +426,9 @@
     &__art {
       color: #A38C76;
       font-size: 15px;
+      cursor: pointer;
+      display: block;
+
     }
 
     &__reviews {
