--- a/src/scss/blocks/categories.scss
+++ b/src/scss/blocks/categories.scss
@@ -1,27 +1,31 @@
-.categories{
-  &-inner{}
-  &-list{
+.categories {
+  &-inner {
+  }
+
+  &-list {
     list-style: none;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 260px);
     gap: 1px;
     padding: 0;
- @media screen and (max-width: 1023px) {
-   grid-template-columns: repeat(2, 1fr);
-   grid-template-rows: repeat(4, 303px);
- }
+    @media screen and (max-width: 1023px) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 303px);
+    }
     @media screen and (max-width: 767px) {
       grid-template-rows: repeat(4, 168px);
 
     }
   }
-  &-link{
+
+  &-link {
     position: relative;
     display: block;
     width: 100%;
     height: 100%;
-    img{
+
+    img {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -33,10 +37,11 @@
         width: 100%;
         height: 90%;
         left: 50%;
-        transform: translate(-50%,-47%) scale(1);
+        transform: translate(-50%, -47%) scale(1);
       }
     }
-    &__text{
+
+    &__text {
       font-size: 18px;
       font-weight: 400;
       line-height: 22px;
@@ -55,7 +60,8 @@
       }
     }
   }
-  &-item{
+
+  &-item {
     position: relative;
     border: 1px solid #f3f3f3;
     //margin: -1px -0px 0 -0px;
@@ -65,27 +71,33 @@
     overflow: hidden;
     padding: 0;
     border-radius: 8px;
-    img{
-        transition: var(--transition);
+
+    img {
+      transition: var(--transition);
     }
-    &:hover{
+
+    &:hover {
       img {
         opacity: 0.5;
       }
     }
-    &-1{
+
+    &-1 {
       grid-column: 1/2;
       grid-row: 1/2;
     }
-    &-2{
+
+    &-2 {
       grid-column: 1/2;
       grid-row: 2/3;
     }
-    &-3{
+
+    &-3 {
       grid-column: 2/3;
       grid-row: 1/3;
     }
-    &-4{
+
+    &-4 {
       grid-column: 3/5;
       grid-row: 1/2;
       @media screen and (max-width: 1023px) {
@@ -94,27 +106,57 @@
 
       }
     }
-    &-5{}
-    &-6{}
+
+    &-5 {
+    }
+
+    &-6 {
+    }
   }
-  &-link{
+
+  &-link {
 
   }
-  &__list{
+
+  &__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
-  &__item{
+
+  &__item {
     margin: 30px 0;
     max-width: 150px;
     width: 100%;
     text-align: center;
+    &:hover {
+      img {
+        display: none;
+      }
+
+      .categories__picture-hover {
+        display: block;
+        opacity: 1;
+      }
+    }
   }
-  &__picture{
+
+  &__picture {
     margin-bottom: 15px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &-hover {
+      display: none;
+    }
+
+
+
   }
-  &__caption{
+
+  &__caption {
     font-size: 14px;
     line-height: 19px;
     font-weight: 600;
