--- a/src/scss/blocks/products.scss
+++ b/src/scss/blocks/products.scss
@@ -663,7 +663,7 @@
     }
 
     &-btn {
-      padding: 9px 16px 9px 13px;
+      //padding: 9px 16px 9px 13px;
       color: #343434;
       font-size: 14px;
       font-weight: 400;
@@ -673,7 +673,7 @@
       display: flex;
       align-items: center;
       white-space: nowrap;
-
+      position: relative;
       img {
         width: 14px;
         height: 14px;
@@ -693,13 +693,57 @@
         font-size: 8px;
         font-weight: 700;
       }
-
+      &__inner{
+        padding: 9px 16px 9px 13px;
+        color: #343434;
+        font-size: 14px;
+        font-weight: 400;
+        border-radius: 5px;
+        background: #E5E5E5;
+        display: flex;
+        align-items: center;
+        white-space: nowrap;
+      }
+      &__body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 41px;
+        background: #fff;
+        left: 0;
+        height: 170px;
+        width: 100%;
+        padding: 15px;
+        z-index: 999;
+        border: 1px solid #E5E5E5;
+        text-align: center;
+        border-radius: 0 0 5px 5px;
+        opacity: 0;
+        visibility: hidden;
+        transition: var(--transition);
+        cursor: pointer;
+        .filter-sort__list{
+          flex-direction: column;
+        }
+      }
+&__filter{
+  &:hover{
+    //.catalog-block-btn
+    .catalog-block-btn__inner{
+      border-radius: 5px 5px 0 0;
+    }
+    .catalog-block-btn__body{
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+}
       &s {
         display: flex;
         border-bottom: 1px solid rgba(0, 0, 0, 0.10);
         margin: 0 -15px 15px;
         padding: 6px 0;
-        overflow: auto;
         max-width: 100vw;
       }
     }
