add product page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -186,6 +186,9 @@ input, textarea, select {
 @import "blocks/homeSlider";
 @import "blocks/categories";
 @import "blocks/products";
+@import "blocks/productFeatures";
+@import "blocks/productTabs";
+@import "blocks/productSingle";
 @import "blocks/reviews";
 @import "blocks/advantages";
 @import "blocks/youtubeSlider";
