--- a/src/scss/blocks/productSingle.scss
+++ b/src/scss/blocks/productSingle.scss
@@ -155,7 +155,18 @@
             font-size: 14px;
             font-weight: 400;
             line-height: 24px;
-            text-decoration-line: strikethrough;
+            position: relative;
+
+            &::before {
+              content: '';
+              position: absolute;
+              height: 1px;
+              width: 100%;
+              background: #C4C4C4;
+              top: 50%;
+              left: 0;
+              transform: translate(0, -50%);
+            }
           }
         }
 
@@ -201,6 +212,7 @@
               display: flex;
               align-items: center;
               justify-content: center;
+              cursor: pointer;
             }
 
             .product-count__text {
@@ -218,6 +230,7 @@
               display: flex;
               align-items: center;
               justify-content: center;
+              cursor: pointer;
             }
           }
 
@@ -274,6 +287,7 @@
         margin-bottom: 10px;
         padding-bottom: 10px;
         border-bottom: 1px solid #EEE;
+
         &__header {
           display: flex;
           align-items: center;
@@ -293,58 +307,73 @@
           font-weight: 400;
           margin-left: 12px;
         }
-        &__content{}
-        &__color{
-          &s{
+
+        &__content {
+        }
+
+        &__color {
+          &s {
             display: flex;
             gap: 25px;
           }
+
           flex: 1;
-          &-title{
+
+          &-title {
             margin-bottom: 4px;
             color: #A38C76;
             font-size: 14px;
             font-weight: 400;
           }
-          &-inner{
+
+          &-inner {
             height: 30px;
             border-radius: 7px;
             border: 1px solid #F2F2F2;
             cursor: pointer;
             transition: var(--transition);
-            &:hover{
-                border: 1px solid #A38C76;
+
+            &:hover {
+              border: 1px solid #A38C76;
             }
           }
         }
-        &__info{
-          &-title{
+
+        &__info {
+          &-title {
             color: #FC6519;
             font-size: 16px;
             font-weight: 400;
             margin-bottom: 4px;
           }
-          &-item{
+
+          &-item {
             max-width: 280px;
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
             gap: 21px;
-            color:  #606060;
+            color: #606060;
             font-size: 14px;
             font-weight: 400;
             line-height: 20px;
             margin-bottom: 2px;
-            &:nth-last-child(1){
+
+            &:nth-last-child(1) {
               margin-bottom: 0;
             }
-            &__text{}
-            &__number{}
+
+            &__text {
+            }
+
+            &__number {
+            }
           }
         }
-        &__footer{
-          &-title{
+
+        &__footer {
+          &-title {
             display: flex;
             align-items: center;
             color: #A38C76;
@@ -352,7 +381,8 @@
             font-weight: 500;
             line-height: 12px;
             margin-bottom: 4px;
-            span{
+
+            span {
               color: #FC7A3A;
               font-weight: 400;
               line-height: 12px;
@@ -360,7 +390,8 @@
               display: block;
               position: relative;
               padding-bottom: 2px;
-              &::before{
+
+              &::before {
                 content: '';
                 position: absolute;
                 width: 100%;
@@ -370,18 +401,21 @@
                 left: 0;
               }
             }
-            svg{
+
+            svg {
               margin-right: 3px;
             }
           }
-          &-text{
+
+          &-text {
             color: #606060;
             font-size: 14px;
             font-weight: 400;
             display: flex;
             align-items: center;
             margin-bottom: 2px;
-            span{
+
+            span {
               color: #000;
               display: flex;
               margin-left: 12px;
