--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -629,6 +629,308 @@ input, textarea, select {
       }
     }
   }
+  &-product{
+    &__container{
+      max-width: 910px;
+      max-height: 480px;
+      position: relative;
+      .close{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 30px;
+        height: 30px;
+      }
+    }
+    &__content{
+      flex: 1;
+    }
+    &__header{
+      display: flex;
+      align-items: center;
+      padding: 20px 24px;
+      margin-bottom: 10px;
+    }
+    &__img{
+      max-width: 124px;
+      width: 100%;
+      max-height: 164px;
+      margin-right: 24px;
+    }
+    &__title{
+      color: #A38C76;
+      font-size: 24px;
+      font-weight: 400;
+      margin-bottom: 15px;
+    }
+    &__price{
+      .price{
+        color: #000;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 24px;
+      }
+
+      margin-right: 40px;
+    }
+    &__flex{
+        display: flex;
+        align-items: center;
+      margin-bottom: 14px;
+    }
+   &__btn{
+     max-width: 185px;
+     width: 100%;
+     padding: 12px 30px;
+     font-size: 14px;
+   }
+    &__color{
+      max-width: 100px;
+      width: 100%;
+      height: 100px;
+      border-radius: 50%;
+      border: 4px solid transparent;
+      overflow: hidden;
+      margin: 6px;
+      position: relative;
+      cursor: pointer;
+      &.active{
+        border: 4px solid #fc6519;
+      }
+      img{
+        width: 100%;
+        height: 100%;
+      }
+      &s{
+        display: flex;
+        flex-wrap: wrap;
+      }
+      &:hover{
+        .modal-product__color-button{
+            opacity: 1;
+        }
+      }
+      &-button{
+        opacity: 0;
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid #000;
+        background: #fff;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 0.3s ease;
+        svg{
+          width: 1em;
+          height: 1em;
+        }
+      }
+    }
+
+    .product-single__body-right-item__colors{
+      max-width: 505px;
+      width: 100%;
+    }
+    .product-single__body-right-item__color-sub-title{
+      color: #606060;
+      font-size: 12px;
+      font-weight: 300;
+    }
+    .product-tabs{
+      padding: 16px 0;
+    }
+    .product-tab__item{
+      font-size: 14px;
+      padding: 7px 16px;
+    }
+  }
+  &-review{
+    &__container{
+      max-width: 600px;
+      max-height: 95vh;
+      min-height: auto;
+      padding: 30px 30px 40px;
+      position: relative;
+      overflow: auto;
+      .close{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 24px;
+        height: 24px;
+      }
+    }
+    &__title{
+      max-width: 475px;
+      color: #A38C76;
+      font-size: 30px;
+      line-height: 1;
+      font-weight: 400;
+      margin-bottom: 12px;
+    }
+    &__desc{
+      color: #000;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 30px;
+    }
+    &-step{
+      &__title{
+        color: #606060;
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 30px;
+      }
+
+      &__form{
+        &-title{
+          color: #000;
+
+          font-size: 18px;
+          font-weight: 400;
+          line-height: 20px;
+          margin-bottom: 24px;
+        }
+
+        &__label,
+        label{
+          color: #606060;
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 20px;
+          display: block;
+          margin-bottom: 8px;
+          .text{
+            display: block;
+            margin-bottom: 20px;
+            color: #000;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 20px;
+          }
+        }
+        &-item {
+          margin-bottom: 24px;
+          &_photo{
+            margin-top: 40px;
+            input{
+              display: none;
+            }
+            label{
+              cursor: pointer;
+            }
+          }
+          &-btn{
+            width: 100%;
+
+            &_1{
+              background: transparent;
+              color: #FC6519;
+              border: 1px solid #FC6519;
+              max-width: 180px;
+              padding: 16px 20px;
+            }
+          }
+          &__radio{
+            display: flex;
+            align-items: center;
+            input{
+                display: none;
+              &:checked + label .radio{
+                border-color: #FC6519;
+                &::before{
+                  opacity: 1;
+                }
+              }
+            }
+            label{
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              .radio{
+                width: 14px;
+                height: 14px;
+                border-radius: 50%;
+                background: #F0F0F0;
+                display: inline-flex;
+                position: relative;
+                border: 1px solid transparent;
+                &::before{
+                  content: '';
+                  position: absolute;
+                  width: 7px;
+                  height: 7px;
+                  border-radius: 50%;
+                  opacity: 0;
+                  transition: var(--transition);
+                  background: #FC6519;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                }
+              }
+              .text-radio {
+                color: #000;
+                font-size: 12px;
+                font-weight: 400;
+                line-height: 20px;
+              }
+            }
+          }
+        }
+
+        textarea{
+          padding: 14px 10px;
+          height: 94px;
+          border-radius: 7px;
+          width: 100%;
+        }
+        input{
+          color: #606060;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 20px;
+          padding: 14px 10px;
+          border-radius: 7px;
+          text-transform: inherit;
+          letter-spacing: 0;
+          border: 1px solid #E3E3E3;
+        }
+        &-footer{
+          display: flex;
+          gap: 20px;
+          margin-top: 40px;
+        }
+      }
+    }
+  }
+}
+
+.photos{
+  padding: 20px 30px;
+  border-radius: 7px;
+  border: 1px solid #E3E3E3;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  &-svg{
+
+  }
+  &-text{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #000;
+    &__line{
+      color: #FC7A3A;
+      text-decoration-line: underline;
+    }
+  }
 }
 
 .cart {
