--- a/src/scss/blocks/productSingle.scss
+++ b/src/scss/blocks/productSingle.scss
@@ -156,6 +156,7 @@
             font-weight: 400;
             line-height: 24px;
             position: relative;
+            margin-left: 20px;
 
             &::before {
               content: '';
@@ -345,6 +346,17 @@
             font-size: 16px;
             font-weight: 400;
             margin-bottom: 4px;
+            position: relative;
+            &-count{
+              position: absolute;
+              top: 50%;
+              right: 0;
+              transform: translate(0, -50%);
+              color: #606060;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 20px;
+            }
           }
 
           &-item {
