--- a/src/scss/_breadcrumb.scss
+++ b/src/scss/_breadcrumb.scss
@@ -12,7 +12,7 @@
     &::before{
       content: '';
       position: absolute;
-      background-image: url("img/arrow.svg");
+      background-image: url("https://avdalyananna.github.io/chairs/img/arrow.svg");
       width: 10px;
       height: 10px;
       right: 20px;
