--- a/src/scss/blocks/productSingle.scss
+++ b/src/scss/blocks/productSingle.scss
@@ -13,15 +13,33 @@
     padding-bottom: 5px;
     margin-bottom: 20px;
     border-bottom: 1px solid #EEE;
+    @media screen and (max-width: 950px) {
+      flex-wrap: wrap;
+    }
 
     &-left {
       display: flex;
       align-items: center;
+    @media screen and (max-width: 950px) {
+      width: 100%;
+      justify-content: space-between;
+    }
+      @media screen and (max-width: 550px) {
+        flex-wrap: wrap;
+      }
     }
 
     &-right {
       display: flex;
       align-items: center;
+    @media screen and (max-width: 950px) {
+      width: 100%;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+      @media screen and (max-width: 550px) {
+        flex-wrap: wrap;
+      }
 
       &-item {
         display: flex;
@@ -38,7 +56,11 @@
       display: flex;
       align-items: center;
       margin-left: 45px;
-
+      @media screen and (max-width: 550px) {
+        margin-left: 0;
+        width: 100%;
+        margin: 4px 0;
+      }
       &-text {
         color: #A38C76;
         font-size: 14px;
@@ -67,10 +89,12 @@
   &__body {
     display: flex;
     justify-content: space-between;
-
+    @media screen and (max-width: 950px) {
+    flex-direction: column;
+    }
 
     &-left {
-      max-width: 703px;
+      max-width: calc(100% - 476px - 21px);
       width: 100%;
       border: 1px solid #f0f0f0;
       height: 500px;
@@ -79,6 +103,18 @@
       border-radius: 8px;
       padding: 0 15px;
       display: flex;
+      @media screen and (max-width: 1100px) {
+        .swiper-button-prev {
+          left: 0;
+        }
+        .swiper-button-next {
+          right: 0;
+        }
+      }
+      @media screen and (max-width: 950px) {
+      max-width: 100%;
+        height: auto;
+      }
 
       .productMinSwiper {
         border-right: #F0F0F0 solid 1px;
@@ -86,7 +122,9 @@
         max-width: 163px;
         width: 100%;
         margin: 0 20px 0 0;
-
+        @media screen and (max-width: 550px) {
+          display: none;
+        }
         .swiper-slide {
           max-width: 163px;
           width: 100%;
@@ -102,7 +140,9 @@
         max-height: 498px;
         max-width: 540px;
         width: 100%;
-
+        @media screen and (max-width: 550px) {
+        max-height: 380px;
+        }
         .swiper-slide {
           max-width: 540px;
           width: 100%;
@@ -127,9 +167,11 @@
     }
 
     &-right {
-      max-width: calc(100% - 703px - 21px);
+      max-width: 476px;
       width: 100%;
-
+      @media screen and (max-width: 950px) {
+        margin-top: 20px;
+      }
       &__price {
         border-radius: 6px;
         background: #FFF;
@@ -347,7 +389,8 @@
             font-weight: 400;
             margin-bottom: 4px;
             position: relative;
-            &-count{
+
+            &-count {
               position: absolute;
               top: 50%;
               right: 0;
