--- a/src/scss/blocks/productTabs.scss
+++ b/src/scss/blocks/productTabs.scss
@@ -435,6 +435,10 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    @media screen and (max-width: 900px) {
+      flex-direction: column-reverse;
+      
+    }
 &__filter{
   display: flex;
   align-items: center;
@@ -445,6 +449,13 @@
     color: #9A8C78;
     text-transform: inherit;
     font-weight: 400;
+  }
+  @media screen and (max-width: 465px) {
+  flex-direction: column;
+    align-items: self-start;
+    .select{
+      margin-bottom: 20px;
+    }
   }
 }
     &__content {
@@ -469,6 +480,9 @@
       max-width: 380px;
       width: 100%;
       padding: 24px;
+      @media screen and (max-width: 400px) {
+        padding: 24px 0;
+      }
     }
   }
 
@@ -511,7 +525,7 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 11px;
-
+      white-space: nowrap;
       &s {
         margin-bottom: 15px;
       }
@@ -560,7 +574,7 @@
     background: transparent;
     border: 1px solid #FC7A3A;
     color: #FC7A3A;
-
+    padding: 13px;
     &:hover {
       color: #fff;
       background: #FC7A3A;
@@ -604,9 +618,16 @@
       display: flex;
       justify-content: space-between;
 
+      @media screen and (max-width: 465px) {
+        flex-direction: column;
+      }
+
       &-content {
         flex: 1;
         max-width: calc(100% - 64px - 24px);
+        @media screen and (max-width: 465px) {
+        max-width: 100%;
+        }
 
         &__inner {
           display: flex;
@@ -630,6 +651,9 @@
       &-line {
         display: flex;
         margin-top: 10px;
+        @media screen and (max-width: 520px) {
+          display: block;
+        }
       }
 
       &-stars {
@@ -650,6 +674,10 @@
       font-weight: 400;
       line-height: 20px;
       text-decoration-line: underline;
+      @media screen and (max-width: 520px) {
+        margin-top: 10px;
+        display: block;
+      }
     }
 
     &__desc {
@@ -665,8 +693,8 @@
 
       img {
         margin: 2px;
-        max-width: 94px;
-        max-height: 94px;
+        max-width: 85px;
+        max-height: 85px;
       }
     }
 
@@ -702,7 +730,9 @@
       background: #E0E0E0;
       position: relative;
       overflow: hidden;
-
+      @media screen and (max-width: 465px) {
+        margin-bottom: 20px;
+      }
       svg {
         position: absolute;
         width: 48px;
@@ -727,7 +757,7 @@
   position: relative;
   padding-bottom: 17px;
   .swiper-slide{
-    max-width: 94px;
+    max-width: 85px;
     width: 100%;
     cursor: pointer;
     &.disabled{
