--- a/src/scss/blocks/productSingle.scss
+++ b/src/scss/blocks/productSingle.scss
@@ -189,8 +189,8 @@
           margin-bottom: 25px;
           @media screen and (max-width: 480px) {
             flex-direction: column;
-            .product-single__body-right__price-tag{
-              justify-content: space-between;
+            .product-single__body-right__price-tag {
+              margin-top: 10px;
             }
           }
 
@@ -303,7 +303,8 @@
 
           .btn {
             max-width: 160px;
-            padding: 12px 30px;
+            padding: 12px 2px;
+            font-size: 12px;
             letter-spacing: 0;
             flex: 1;
 
@@ -332,26 +333,31 @@
           margin-right: 4px;
           display: flex;
           align-items: center;
-&-1{
-  display: flex;
-  align-items: center;
-}
+
+          &-1 {
+            display: flex;
+            align-items: center;
+          }
+
           &__info {
             margin: 0 16px 0 6px;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
-            &:hover{
-              .product-single__body-right__price-tag__info-inner{
+
+            &:hover {
+              .product-single__body-right__price-tag__info-inner {
                 opacity: 1;
                 visibility: visible;
               }
             }
+
             svg {
               cursor: pointer;
             }
-            &-inner{
+
+            &-inner {
               position: absolute;
               opacity: 0;
               visibility: hidden;
@@ -359,23 +365,27 @@
               min-width: 300px;
               width: 100%;
               z-index: 99;
-              &-bg{
-                box-shadow: 0 4px 4px 0 rgba(0,0,0,.12);
-                padding:  15px 17px;
+
+              &-bg {
+                box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .12);
+                padding: 15px 17px;
                 border-radius: 6px;
                 background: #fff;
                 display: block;
                 max-height: 290px;
                 position: relative;
               }
-              ul{
+
+              ul {
                 padding: 0 0 0 20px;
                 margin: 8px 0;
               }
+
               a {
                 color: #FC6519;
               }
-              b{
+
+              b {
                 font-weight: 400;
                 color: #a38c76;
               }
@@ -433,8 +443,21 @@
             }
           }
 
+          &.error-block {
+            .product-single__body-right-item__color-inner{
+              border: 1px solid #E41F25;
+            }
+          }
+
+          .is-error {
+            color: #E41F25;
+            font-size: 10px;
+            font-weight: 400;
+          }
+
           flex: 1;
           min-width: 140px;
+
 
           &-title {
             margin-bottom: 4px;
