--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -730,21 +730,26 @@ input, textarea, select {
    &__btn{
      max-width: 185px;
      width: 100%;
-     padding: 12px 30px;
+     padding: 12px 2px;
      font-size: 14px;
    }
     &__color{
-      max-width: 100px;
-      width: 100%;
-      height: 100px;
-      border-radius: 50%;
-      border: 4px solid transparent;
-      overflow: hidden;
       margin: 6px;
-      position: relative;
       cursor: pointer;
+      text-align: center;
+      &-inner{
+        position: relative;
+        max-width: 100px;
+        width: 100%;
+        height: 100px;
+        border-radius: 50%;
+        border: 4px solid transparent;
+        overflow: hidden;
+      }
       &.active{
-        border: 4px solid #fc6519;
+        .modal-product__color-inner{
+          border: 4px solid #fc6519;
+        }
       }
       img{
         width: 100%;
